# Codex-Chat-Bridge

./: .gitignore  ARCH.md  LICENSE  README.md  install.ps1  install.sh
bridge/: ARCH.md  config.example.json  package.json  start-telegram-bridge.ps1  start-telegram-bridge.sh  status-telegram-bridge.ps1  status-telegram-bridge.sh  stop-telegram-bridge.ps1  stop-telegram-bridge.sh
bridge/scripts/: ARCH.md  run-node-tests.mjs
bridge/src/: ARCH.md  access-profile.mjs  attach-notification.mjs  binding-store.mjs  bridge-diagnostics.mjs  bridge-service.mjs  cli-support.mjs  cli.mjs  codex-app-server-protocol.mjs  codex-app-server.mjs  commands.mjs  control-server.mjs  daemon-control.mjs  desktop-access-context.mjs  interactive-prompt-manager.mjs  progress-summary.mjs  relay-result.mjs  serve-loop.mjs  telegram-api.mjs  telegram-progress.mjs  tray-companion.mjs
bridge/tests/: ARCH.md  attach-notification.test.mjs  attached-session-state.test.mjs  binding-store.test.mjs  bridge-service-binding.test.mjs  bridge-service-diagnostics.test.mjs  bridge-service-interactive.test.mjs  bridge-service-lifecycle.test.mjs  bridge-service-progress.test.mjs  bridge-service-queue.test.mjs  cli-support.test.mjs  codex-app-server-access.test.mjs  codex-app-server-core.test.mjs  codex-app-server-interactive.test.mjs  codex-app-server-progress.test.mjs  codex-app-server-protocol.test.mjs  commands.test.mjs  (+10 more)
bridge/tray-companion/: ARCH.md  Cargo.toml
bridge/tray-companion/src/: ARCH.md  bridge_status.rs  main.rs  menu_model.rs
docs/: ARCH.md  green-checkpoints.md
skill/: ARCH.md
(+21 files in other folders)
