[package]
name = "telegram-bridge-tray-companion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tray-companion"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35.0"
thiserror = "2"
tray-icon = "0.21.3"
